--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Hwan"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "세상의 **균열**을 만드는 해커를 꿈꾸는 블로그"
+  bio              : "Novice developer"
   location         : <br/>"Busan, South Korea"
   email            :
   links:
