--- a/_config.yml
+++ b/_config.yml
@@ -112,43 +112,45 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:ckdghks9741@gmail.com"
+      url: "ckdghks9741@gmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/changhwan77"   
-  #  - label: "Website"
-   #   icon: "fas fa-fw fa-link"
+      url: "https://github.com/changhwan77"
+    #- label: "Instagram"
+    #  icon: "fab fa-fw fa-instagram"
+    #  url: "https://instagram.com/06.25ash"
+    #- label: "Website"
+    #  icon: "fas fa-fw fa-link"
       # url: "https://your-website.com"
-   # - label: "Twitter"
-   #   icon: "fab fa-fw fa-twitter-square"
+    #- label: "Twitter"
+    #  icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
-   # - label: "Facebook"
-   #   icon: "fab fa-fw fa-facebook-square"
+    #- label: "Facebook"
+    #  icon: "fab fa-fw fa-facebook-square"
       # url: "https://facebook.com/"
-   # - label: "Instagram"
-      #icon: "fab fa-fw fa-instagram"
-      # url: "https://instagram.com/"
 
 # Site Footer
 footer:
   links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/changhwan77"
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
       # url:
-    # - label: "Facebook"
-   #   icon: "fab fa-fw fa-facebook-square"
+    #- label: "Facebook"
+    #  icon: "fab fa-fw fa-facebook-square"
       # url:
-    - label: "GitHub"
-      icon: "fab fa-fw fa-github"
-       url:"https://github.com/changhwan77"
-   # - label: "GitLab"
-   #   icon: "fab fa-fw fa-gitlab"
+    
       # url:
-  #  - label: "Bitbucket"
-  #    icon: "fab fa-fw fa-bitbucket"
+    #- label: "GitLab"
+    #  icon: "fab fa-fw fa-gitlab"
       # url:
-   # - label: "Instagram"
-   #   icon: "fab fa-fw fa-instagram"
+    #- label: "Bitbucket"
+    #  icon: "fab fa-fw fa-bitbucket"
+      # url:
+    #- label: "Instagram"
+    #  icon: "fab fa-fw fa-instagram"
       # url:
 
 
