--- a/_config.yml
+++ b/_config.yml
@@ -106,7 +106,7 @@ analytics:
 author:
   name             : "Hwan"
   avatar           : "/assets/images/jeju.jpg"
-  bio              : "The joy of knowing what I don't know"
+  bio              : "The Joy Of Knowing What I don't know"
   location         : <br/>"Busan, South Korea"
   email            :
   links:
