--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@ main:
   #   url: /year-archive/
   # - title: "Sample Collections"
   #   url: /collection-archive/
-  - title: "Category"
-    url: /categories/
-  - title: "Tag"
-    url: /tags/
+  # - title: "Category"
+  #  url: /categories/
+  # - title: "Tag"
+  #  url: /tags/
