--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ analytics:
   provider               : "google-gtag" # false (default), "google", "google-universal", "google-gtag", "custom"
   google:
     tracking_id          : "G-PLR5FNJGHK"
-    anonymize_ip         : false (default)
+    anonymize_ip         : false # true, false (default)
 
 
 # Site Author
