--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ google:
 # SEO Related
 google_site_verification :
 bing_site_verification   :
-naver_site_verification  :
+naver_site_verification  : "b294c0ae4efda5bbfb4ec785d1066637a2d88ba8"
 yandex_site_verification :
 baidu_site_verification  :
 
