--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Members: <br/> Kang Chang Hwan <br/> Lee Ye Seul <br/> Yun Seok Hyun <br/><br/> Mento: Lim Nam Gyu"
+  name             : "Members: <br/> Kang Chang Hwan <br/> Lee Ye Seul <br/> Yun Seok Hyun <br/><br/> Mento: Nam Gyu"
   avatar           : "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTK-i2oXZg7LQILuR6lwFBu-bcPANjEXMq68Q&usqp=CAU"
   bio              : "<br/> 세상의 문제를 풀어나가는 넓은 의미의 해커들"
   location         : <br/>"Busan, South Korea"
